[package]
name = "token-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
reqwest = "0.11"
tokio = { version = "1.27", features = [
    "time",
    "sync",
    "macros",
    "test-util",
    "rt-multi-thread",
    "parking_lot",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-retry = "0.3"
tonic = { version = "0.12", features = ["gzip", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
thiserror = "1"
chrono = "0.4.38"
regex = "1.11.1"
lazy_static = "1.5.0"
semver = "1.0.23"
solana-client = "2.1.5"
solana-sdk = "2.1.5"
solana-transaction-status = "2.1.5"
serde_json = "1.0.133"
bincode = "1.3.3"
base64 = "0.22.1"
serde = "1.0.216"
hex = "0.4.3"
borsh = "1.5.3"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
csv = "1.3.1"
zmq = "0.10.0"
clap = { version = "4.3", features = ["derive"] }
