[package]
name = "preprocessor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
avro-rs = "0.13.0"
chrono = "0.4.39"
common ={ path = "../common" }
csv = "1.3.1"
lazy_static = "1.5.0"
native-tls = "0.2.14"
postgres-native-tls = "0.5.1"
serde = "1.0.216"
tokio-postgres = "0.7.13"
tokio = { version = "1.40.0", features = ["full"]}
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"