[package]
name = "pricer"
version = "0.1.0"
edition = "2021"

[dependencies]
common ={ path = "../common" }
anyhow = "1.0.96"
bincode = "1.3.3"
chrono = "0.4.39"
csv = "1.3.1"
reqwest = "0.12.12"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.27", features = [
    "time",
    "sync",
    "macros",
    "test-util",
    "rt-multi-thread",
    "parking_lot",
] }
zip = "2.2.2"